compile.log
/main.cpp: In function ‘int main()’:
/main.cpp:159:24: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<Data>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
         for (int i=0; i<reader.dataArray.size(); i++)
                       ~^~~~~~~~~~~~~~~~~~~~~~~~
/main.cpp:167:9: error: ‘cerr’ was not declared in this scope
         cerr<<"Kor szama: "<<bitjeim<<"\n";
         ^~~~
/main.cpp:167:9: note: suggested alternative:
In file included from /main.cpp:5:
/usr/include/c++/8/iostream:62:18: note:   ‘std::cerr’
   extern ostream cerr;  /// Linked to standard error (unbuffered)
                  ^~~~
/main.cpp:179:35: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<Data>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
                     for(int j=0; j<reader.dataArray.size(); j++)
                                  ~^~~~~~~~~~~~~~~~~~~~~~~~
/main.cpp:181:59: warning: comparison of integer expressions of different signedness: ‘unsigned int’ and ‘int’ [-Wsign-compare]
                         if(reader.dataArray[j].currStoreId==i)
/main.cpp:254:19: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<MessagePiece>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
     for(int i=0; i<azenyem.size(); i++)
                  ~^~~~~~~~~~~~~~~
/main.cpp:270:19: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<MessagePiece>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
     for(int i=0; i<azenyem.size(); i++)
                  ~^~~~~~~~~~~~~~~
/main.cpp:133:9: warning: unused variable ‘befutott’ [-Wunused-variable]
     int befutott=0;
         ^~~~~~~~